--- a/index.html
+++ b/index.html
@@ -12,20 +12,16 @@
 
 <body>
     <div class="app">
-        <ul>
-            <li>Tyty</li>
-            <li>Popo</li>
-            <li>Jojo</li>
-            <li>Tutu</li>
-            <li>Hoho</li>
-        </ul>
+        <div class="row">
+            <aside class="col-3 actions">
+                <button onclick="renderBooks()" class="btn btn-info">Render books</button>
+            </aside>
+            <ul class="col-9 books"></ul>
+        </div>
     </div>
-
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
     <script src="src/immutable.min.js"></script>
-    <script src="src/ui.js"></script>
     <script src="src/scripts.js"></script>
+    <script src="src/ui.js"></script>
 </body>
 
 </html>
