--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         <div class="row">
             <aside class="col-3 actions">
                 <button onclick="renderBooks()" class="btn btn-info">Render books</button>
+                <form class="add-book">
+                    <input type="text" placeholder="Title" name="title">
+                    <input type="text" placeholder="Author" name="author">
+                    <input type="text" placeholder="Publishing house" name="publishing-house">
+                    <input type="text" placeholder="Tags" name="tags">
+                    <br>
+                    <label><input type="checkbox" name="is-read"> Is read</label>
+                    <br>
+                    <button>Submit</button>
+                </form>
             </aside>
             <ul class="col-9 books"></ul>
         </div>
